# crabml

./: .gitignore  .readthedocs.yaml  BRANCH_MODEL_IMPLEMENTATION.md  Cargo.toml  README.md  benchmark_fair_results.txt  benchmark_m7_m8.py  benchmark_optimization_fair.py  pyproject.toml  rename_package.py  session.10.21.md  test_import.py  test_optimizers_m7_m8.py  test_rename.sh
.github/workflows/: ci.yml
benchmarks/: README.md  config.yaml  run_benchmark.py
benchmarks/data/: README.md
benchmarks/lib/: __init__.py  comparator.py  crabml_runner.py  paml_runner.py  simulator.py  visualizer.py
dev/reference_implementations/: README.md  likelihood.py
docs/: README.md  TESTING_STRATEGY.md  changelog.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
docs/api/: analysis.rst  core.rst  high_level.rst  io.rst  models.rst  optimize.rst  simulate.rst
docs/user_guide/: advanced.rst  cli.rst  hypothesis_testing.rst  installation.rst  models.rst  quickstart.rst  simulation.rst
examples/: export_formats_demo.py  test_positive_selection_api.py
rust/: Cargo.toml  pyproject.toml
rust/src/: branch_site_likelihood.rs  codon.rs  lib.rs  likelihood.rs  matrix.rs  qmatrix.rs
src/crabml/: __init__.py  api.py
src/crabml/analysis/: __init__.py  beb.py  beb_visualizer.py  branch_model.py  branch_site.py  lrt.py  positive_selection.py  results.py
src/crabml/cli/: __init__.py  main.py
src/crabml/cli/commands/: branch_model.py  branch_site.py  fit.py  simulate.py  test.py
src/crabml/core/: __init__.py  likelihood_rust.py  matrix.py
src/crabml/io/: __init__.py  sequences.py  trees.py
src/crabml/models/: __init__.py  codon.py  codon_branch.py  codon_branch_site.py
src/crabml/optimize/: __init__.py  branch.py  branch_site.py  distance_init.py  optimizer.py
src/crabml/simulate/: __init__.py  base.py  codon.py  output.py
src/pycodeml/: __init__.py
src/pycodeml/core/: __init__.py  likelihood_rust.py  matrix.py
src/pycodeml/io/: __init__.py  sequences.py  trees.py
src/pycodeml/models/: __init__.py  codon.py
src/pycodeml/optimize/: __init__.py  optimizer.py
tests/: conftest.py  test_api.py  test_branch_model_analysis.py  test_branch_models.py  test_branch_paml_validation.py  test_branch_site_likelihood.py  test_branch_site_lrt.py  test_branch_site_null.py  test_branch_site_optimization.py  test_cli.py
tests/data/: lysozyme.tree  paml_examples
tests/data/branch_site/: lysozymeLarge_clean.nuc  lysozyme_model_a_ref.txt
tests/data/paml_examples/lysozyme/: lnf  lysozyme_m0.ctl  mlc_m0.txt  rst  rst1  rub
tests/data/paml_reference/: lnf  lysin_m7.ctl  lysin_m8.ctl  lysozyme_m0.ctl  lysozyme_m0_out.txt  lysozyme_m1a.ctl  lysozyme_m1a_out.txt  lysozyme_m2a.ctl  lysozyme_m2a_out.txt  lysozyme_m3.ctl  lysozyme_m3_out.txt  lysozyme_m4.ctl  lysozyme_m4_out.txt  lysozyme_m5.ctl  lysozyme_m5_out.txt  lysozyme_m6.ctl  lysozyme_m6_out.txt  lysozyme_m7.ctl  lysozyme_m7_out.txt  lysozyme_m8.ctl  lysozyme_m8_out.txt  lysozyme_m8a.ctl  lysozyme_m8a_out.txt  lysozyme_m9.ctl  lysozyme_m9_out.txt  rst  rst1  rub
tests/data/paml_reference/hiv_nssites/: codeml_m7_m8.ctl  codeml_m8a.ctl  lnf  mlc  mlc_m7_m8  mlc_m8a  rst  rst1  rub
tests/data/paml_reference/lysin/: 2NG.dN  2NG.dS  2NG.t  codeml_m0_m1a_m2a.ctl  codeml_m7_m8.ctl  codeml_m8a.ctl  lnf  lysin.fasta  mlc_m0_m1a_m2a  mlc_m7  mlc_m7_m8  mlc_m8  mlc_m8a  rst  rst1  rub
tests/paml_reference/: lysozymeSmall.trees  lysozymeSmall.txt
tests/test_analysis/: test_compare.py  test_lrt.py  test_positive_selection_integration.py  test_results.py
tests/test_integration/: test_lysozyme.py
tests/test_paml_examples/: __init__.py  test_hiv_nssites.py  test_lysin.py  test_lysozyme.py
tests/test_reference/: test_matrix.py  test_paml_m0.py  test_paml_site_class_models.py  test_site_class_optimizers.py
tests/test_rust/: test_paml_rust_validation.py  test_rust_matrix.py
tests/test_simulate/: test_m0_simulator.py  test_site_class_simulators.py
tests/test_unit/: test_codon.py  test_io.py  test_likelihood.py
