[project]
name = "crabml"
version = "0.2.0"
description = "High-performance reimplementation of PAML's codeml using Python and Rust"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Andrew Kern", email = "adkern@uoregon.edu" }
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "biopython>=1.81",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
crabml = "crabml.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.1",
    "ipython>=8.0",
    "maturin>=1.9,<2.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Location of Rust code
manifest-path = "Cargo.toml"

# Python source location
python-source = "src"

# Module name (must match lib.name in Cargo.toml)
module-name = "crabml.crabml_rust"

# Build features
features = ["pyo3/extension-module"]

# Include Python code
include = ["src/crabml/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
