[package]
name = "crabml_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "crabml_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
lapack-src = { version = "0.10", features = ["openblas"] }
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
rayon = "1.10"
once_cell = "1.20"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
